<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/periodTextView"
        style="@style/TextPrimaryDark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/taxes_view_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ru.tzkt.slavery.view.SingleTaxView
        android:id="@+id/taxNdfl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/periodTextView"
        app:taxDescription="@string/tax_description_ndfl"
        app:taxName="@string/tax_name_ndfl" />

    <ru.tzkt.slavery.view.SingleTaxView
        android:id="@+id/taxPension"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taxNdfl"
        app:taxDescription="@string/tax_description_pension"
        app:taxName="@string/tax_name_pension" />

    <ru.tzkt.slavery.view.SingleTaxView
        android:id="@+id/taxMedicine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taxPension"
        app:taxDescription="@string/tax_description_medicine"
        app:taxName="@string/tax_name_medicine" />

    <ru.tzkt.slavery.view.SingleTaxView
        android:id="@+id/taxFss"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taxMedicine"
        app:taxDescription="@string/tax_description_fss"
        app:taxName="@string/tax_name_fss" />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorSecondaryDark"
        app:layout_constraintTop_toBottomOf="@id/taxFss" />

    <ru.tzkt.slavery.view.TotalAmountView
        android:id="@+id/totalTaxAmountView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:headerText="@string/taxes_view_total_header_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider1" />

    <ru.tzkt.slavery.view.TotalAmountView
        android:id="@+id/beforeTaxesAmountView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:headerText="@string/taxes_view_salary_before_taxes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/totalTaxAmountView" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorSecondaryDark"
        app:layout_constraintTop_toBottomOf="@id/beforeTaxesAmountView" />

    <Switch
        android:id="@+id/periodSwitch"
        style="@style/TextPrimaryDark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/taxes_view_show_year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider2" />

</androidx.constraintlayout.widget.ConstraintLayout>